# fyler.windows

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml  security-scan.yml
crates/fyler-app/: Cargo.toml  build.rs
crates/fyler-app/examples/: feedback_probe.rs
crates/fyler-app/src/: config.rs  drag_flow.rs  extract_flow.rs  feedback.rs  import_flow.rs  main.rs  nvim_locate.rs  pane_runtime.rs  picker.rs  queue_stats.rs  save_flow.rs  session.rs  transfer_flow.rs  undo_format.rs  undo_journal.rs
crates/fyler-core/: Cargo.toml
crates/fyler-core/src/: editor.rs  feedback.rs  fileinfo.rs  gitstatus.rs  grammar.rs  id.rs  keymap.rs  lib.rs  options.rs  pane.rs  path.rs  plan.rs  report.rs  save.rs  scanwarn.rs  search.rs  transfer.rs  tree.rs  undo.rs  validate.rs  win_naming.rs  window.rs
crates/fyler-engine-nvim/: Cargo.toml
crates/fyler-engine-nvim/src/: engine.rs  guard.rs  lib.rs  spawn.rs  translate.rs
crates/fyler-engine-nvim/tests/: headless_rpc.rs
crates/fyler-fsops/: Cargo.toml
crates/fyler-fsops/src/: apply.rs  backup.rs  case.rs  catalog.rs  classify.rs  clipboard.rs  dialog.rs  dirsize.rs  display.rs  drag.rs  drives.rs  extract.rs  gitstatus.rs  identity.rs  info.rs  lib.rs  long_path.rs  onedrive.rs  open.rs  openwith.rs  preflight.rs  recycle.rs  scan.rs  shortcut.rs  terminal.rs  undo.rs  watch.rs  winattr.rs
crates/fyler-gui/: Cargo.toml  build.rs
crates/fyler-gui/src/: app.rs  chrome.rs  cmdline.rs  conceal.rs  confirm.rs  icon.rs  input.rs  lib.rs  modeline.rs  theme.rs  tree_view.rs  widgets.rs
crates/fyler-pipeline/: Cargo.toml
crates/fyler-pipeline/src/: diff.rs  lib.rs  parse.rs  validate.rs
crates/fyler-pipeline/tests/: spec_m2.rs
crates/m0-spike/: Cargo.toml
crates/m0-spike/src/: main.rs
docs/: CONFIGURATION.md  DESIGN.md  M0_RESULTS.md  PRIVACY.md  ROADMAP_M10.md  ROADMAP_M11.md  ROADMAP_M12.md  ROADMAP_M13.md  ROADMAP_M6.md  ROADMAP_M9.md
installer/: fyler.iss
server/feedback-worker/: README.md  schema.sql  wrangler.toml
server/feedback-worker/src/: validate.js  worker.js
server/feedback-worker/test/: validate.test.mjs
