[workspace]
resolver = "3"
members = [
    "crates/fyler-core",
    "crates/fyler-pipeline",
    "crates/fyler-engine-nvim",
    "crates/fyler-fsops",
    "crates/fyler-gui",
    "crates/fyler-app",
    "crates/m0-spike",
]

[workspace.package]
version = "0.1.9"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
# --- 外部クレート(docs/DESIGN.md「主要クレート」参照) ---
anyhow = "1.0"
thiserror = "2.0"
arc-swap = "1.9"
tokio = { version = "1.52", features = ["full"] }
# nvim-rsはAPIをunstableと明言しているため完全固定(DESIGN.md)。安易に上げない。
nvim-rs = { version = "=0.9.2", features = ["use_tokio"] }
rmpv = "1.3"
async-trait = "0.1"
eframe = "0.35"
trash = "5.2"
notify = "8.2"
toml = "1.1"
# zip展開(fyler-fsops extract)。deflate対応の最小構成。8.x系はrust 1.88を
# 要求するため、workspaceのrust-version 1.85でビルドできる7.x系に留める。
zip = { version = "7.2", default-features = false, features = ["deflate"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

# --- ワークスペース内クレート ---
fyler-core = { path = "crates/fyler-core" }
fyler-pipeline = { path = "crates/fyler-pipeline" }
fyler-engine-nvim = { path = "crates/fyler-engine-nvim" }
fyler-fsops = { path = "crates/fyler-fsops" }
fyler-gui = { path = "crates/fyler-gui" }
