[package]
name = "fyler-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "fyler"
path = "src/main.rs"

[dependencies]
fyler-core.workspace = true
fyler-pipeline.workspace = true
fyler-engine-nvim.workspace = true
fyler-fsops.workspace = true
fyler-gui.workspace = true
anyhow.workspace = true
tokio.workspace = true
toml.workspace = true
# native-tls固定: WindowsではSChannel=システム証明書ストアを使う(企業proxy対応)。
# rustls(既定feature)はringのCコンパイルを要求しCIのwindows-gnuクロスclippyが割れるため使わない。
ureq = { version = "3.3.0", default-features = false, features = ["native-tls"] }

[build-dependencies]
embed-manifest = "1.5"

[dev-dependencies]
tempfile = "3"
