[package]
name = "fyler-engine-nvim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
fyler-core.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
tokio.workspace = true
# nvim-rsに依存してよいのはこのクレートだけ(AGENTS.md 絶対ルール2)
nvim-rs.workspace = true
