[package]
name = "fyler-fsops"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
test-support = []

[dependencies]
fyler-core.workspace = true
anyhow.workspace = true
trash.workspace = true
notify.workspace = true
ignore = "0.4.29"
zip.workspace = true

# windowsクレートに依存してよいのはこのクレートだけ(AGENTS.md 絶対ルール3の周辺)
[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Time",
    "Win32_System_SystemServices",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_Graphics_Gdi",
] }
# #[implement]マクロの展開が`::windows_core`を直接参照するため必要
# (windowsクレートと同じファミリ。バージョンはwindows 0.62内部と揃える)。
windows-core = "0.62"

[dev-dependencies]
tempfile = "3"
